--- a/wallet.html
+++ b/wallet.html
@@ -8,11 +8,15 @@
 <body>
     <!-- <script src="./webapp.js"></script> -->
     <script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js/dist/web3.min.js"></script>
+    <script src="https://cdn.rawgit.com/ethereumjs/browser-builds/2fb69a714afe092b06645286f14b94f41e5c062c/dist/ethereumjs-tx.js"></script>
+    <script src="./dist/ethereumjs-vm-2.3.1.js"></script>
     <script type="text/javascript"> 
-        var web3 = new Web3(new Web3.providers.HttpProvider("https://ropsten.infura.io"))
+        const network_url = "https://ropsten.infura.io"
+        const gas_price_url = "https://ethgasstation.info/json/ethgasAPI.json"
+        var web3 = new Web3(new Web3.providers.HttpProvider(network_url))
 
         function getCurrentGasPrices() {
-            fetch('https://ethgasstation.info/json/ethgasAPI.json').then(response => {
+            fetch(gas_price_url).then(response => {
                 return response.text()
             }).then(data => {
                 data = JSON.parse(data)
@@ -30,7 +34,27 @@
             document.getElementById("balance").innerText = balanse_info/1000000000000000000 + " ethers"
         }
 
-        
+        async function sendTransaction(){
+            const sender = document.getElementById("sender").value
+            const privKey = document.getElementById("privKey").value
+            const to = document.getElementById("to").value
+            const amount = document.getElementById("amount").value
+            const fee = document.getElementById("gasprice").value
+            const nonce = await web3.eth.getTransactionCount(sender)
+            let details = {
+                "to": to,
+                "value": (amount * 1000000000).toString(16),
+                "gas": 21000,
+                "gasPrice": fee * 1000000000, // converts the gwei price to wei(*10^9)
+                "nonce": nonce,
+                "chainId": 3 // EIP 155 chainId - mainnet: 1, rinkeby: 4, ropsten: 3, morden: 2
+            }
+            const transaction = new EthJS.Tx(details)
+            transaction.sign(ethereumjs.Buffer.Buffer.from(privKey, 'hex'))
+            const serializedTransaction = transaction.serialize()
+            const transactionId = await web3.eth.sendRawTransaction('0x' + serializedTransaction.toString('hex'))
+            const url = `https://rinkeby.etherscan.io/tx/${transactionId}`
+        }
     </script>
 	<div class="jumbotron text-center">
         <div class="row">
@@ -38,21 +62,25 @@
                 <div class="well">
                     <h3><span class="fa fa-star"></span> Send transaction</h3>
                     <div class="form-group">
-                        <label>Recipient address</label>
-                        <input type="text" class="form-control" name="to">
-                    </div>
-                    <div class="form-group">
-                        <label>Amount to send</label>
-                        <input class="form-control" name="amount">
+                        <label>Sender address</label>
+                        <input type="text" class="form-control" id="sender" value="0x142BC8c8996dc2D2b579fAb4522CEf0928DB35cE">
                     </div>
                     <div class="form-group">
                         <label>Private key</label>
-                        <input class="form-control" name="privKey">
+                        <input type="text" class="form-control" id="privKey" value="0cf6da84e1b3219775dab09b5751b28478afad15fabdb7ab7495abd81c4f06f6">
                     </div>
                     <div class="form-group">
-                            <label>Gas price(fee)</label>
-                            <input class="form-control" name="gasprice">
-                        </div>
+                        <label>Recipient address</label>
+                        <input type="text" class="form-control" id="to" value="0xb1ecd2b698565f2efbea025f64f388fa30402e1d">
+                    </div>
+                    <div class="form-group">
+                        <label>Amount to send</label>
+                        <input class="form-control" id="amount" value="0.2">
+                    </div>
+                    <div class="form-group">
+                        <label>Gas price(fee)</label>
+                        <input class="form-control" id="gasprice" value="30">
+                    </div>
                     <button class="btn btn-primary btn-sm" onclick="sendTransaction();"> Send transaction</button>
                 </div>
             </div>
