--- a/client/wallet.html
+++ b/client/wallet.html
@@ -8,8 +8,7 @@
 <body>
     <script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js/dist/web3.min.js"></script>
     <script src="https://cdn.rawgit.com/ethereumjs/browser-builds/2fb69a714afe092b06645286f14b94f41e5c062c/dist/ethereumjs-tx.js"></script>
-    <script src="../dist/ethereumjs-vm-2.3.1.js"></script>
-    <script src="./web.js"></script>
+    <script type="text/javascript" src="./web.js"></script>
 	<div class="jumbotron text-center">
         <div class="row">
             <div id="profile-info" class="col-sm-6">
@@ -29,11 +28,11 @@
                     </div>
                     <div class="form-group">
                         <label>Amount to send</label>
-                        <input class="form-control" id="amount" value="0.2">
+                        <input class="form-control" id="amount" value="0.002">
                     </div>
                     <div class="form-group">
                         <label>Gas price(fee)</label>
-                        <input class="form-control" id="gasprice" value="30">
+                        <input class="form-control" id="gasprice" value="30" disabled>
                     </div>
                     <button class="btn btn-primary btn-sm" onclick="sendTransaction();"> Send transaction</button>
                 </div>
