--- a/client/wallet.html
+++ b/client/wallet.html
@@ -10,44 +10,54 @@
     <script src="https://cdn.rawgit.com/ethereumjs/browser-builds/2fb69a714afe092b06645286f14b94f41e5c062c/dist/ethereumjs-tx.js"></script>
     <script type="text/javascript">
     const network_url = "https://ropsten.infura.io"
-const gas_price_url = "https://ethgasstation.info/json/ethgasAPI.json"
-//var web3 = new Web3(new Web3.providers.HttpProvider(network_url))
-
-function getCurrentGasPrices() {
-    fetch(gas_price_url).then(response => {
-        return response.text()
-    }).then(data => {
-        data = JSON.parse(data)
-        document.getElementById("low-price").innerText = data.safeLow / 10 + " (transaction completes in < 30 minutes)"
-        document.getElementById("medium-price").innerText = data.average / 10 + " (transaction completes in < 5 minutes)"
-        document.getElementById("high-price").innerText = data.fast / 10 + " (transaction completes in < 2 minutes)"
-        setTimeout(getCurrentGasPrices, 50000)
-    })
-}
-getCurrentGasPrices()
-
-async function getBalance(){
+    const gas_price_url = "https://ethgasstation.info/json/ethgasAPI.json"
     var web3 = new Web3(new Web3.providers.HttpProvider(network_url))
-    const addr = document.getElementById("address").value
-    const balanse_info = await web3.eth.getBalance(addr)
-    document.getElementById("balance").innerText = balanse_info/1000000000000000000 + " ethers"
-}
 
-async function sendTransaction(){
-    const sender = document.getElementById("sender").value
-    const privKey = document.getElementById("privKey").value
-    const to = document.getElementById("to").value
-    const amount = document.getElementById("amount").value
-    //const fee = document.getElementById("gasprice").value
-    let data = {from: sender, privKey: privKey, reciver: to, amount: amount}
-    data = Object.keys(data).map(key => encodeURIComponent(key) + '=' + encodeURIComponent(data[key])).join('&')
-    fetch('http://localhost:3000/sendTransaction', {mode: "no-cors",method: "POST",headers: {
-        'Content-Type':'application/x-www-form-urlencoded'
-      }, body: data}).then(response => {
-          response.text().then(data => console.log(data))
-      })
-    //const url = `https://ropsten.etherscan.io/tx/${content}`
-}
+    function getCurrentGasPrices() {
+        fetch(gas_price_url).then(response => {
+            return response.text()
+        }).then(data => {
+            data = JSON.parse(data)
+            document.getElementById("low-price").innerText = data.safeLow / 10 + " (transaction completes in < 30 minutes)"
+            document.getElementById("medium-price").innerText = data.average / 10 + " (transaction completes in < 5 minutes)"
+            document.getElementById("high-price").innerText = data.fast / 10 + " (transaction completes in < 2 minutes)"
+            setTimeout(getCurrentGasPrices, 50000)
+        })
+    }
+    getCurrentGasPrices()
+
+    async function getBalance(){
+        const addr = document.getElementById("address").value
+        const balanse_info = await web3.eth.getBalance(addr)
+        document.getElementById("balance").innerText = balanse_info/1000000000000000000 + " ethers"
+    }
+
+    async function sendTransaction(){
+        const sender = document.getElementById("sender").value
+        const privKey = document.getElementById("privKey").value
+        const to = document.getElementById("to").value
+        const amount = document.getElementById("amount").value
+        const fee = document.getElementById("gasprice").value
+        const nonce = await web3.eth.getTransactionCount(sender)
+        console.log(nonce)
+
+        let data = {from: sender, privKey: privKey, reciver: to, amount: amount, gasprice: fee, nonce: nonce}
+        data = Object.keys(data).map(key => encodeURIComponent(key) + '=' + encodeURIComponent(data[key])).join('&')
+        fetch('http://localhost:3000/sendTransaction', {mode: "no-cors",method: "POST",headers: {
+            'Content-Type':'application/x-www-form-urlencoded'
+        }, body: data}).then(response => {
+            response.text().then(data => {
+                data = JSON.parse(data)
+                var div = document.createElement("div")
+                if(data.code == 0){
+                    div.innerHTML = `<div class="alert alert-success">Transaction send to Ethereum blockchain without errors \n https://ropsten.etherscan.io/tx/${data.data}</div>`
+                } else {
+                    div.innerHTML = '<div class="alert alert-danger">Transaction did not send to Ethereum blockchain (something going wrong)</div>'
+                }
+                document.body.appendChild(div)
+            })
+        })
+    }
     </script>
 	<div class="jumbotron text-center">
         <div class="row">
@@ -72,7 +82,7 @@ async function sendTransaction(){
                     </div>
                     <div class="form-group">
                         <label>Gas price(fee)</label>
-                        <input class="form-control" id="gasprice" value="30" disabled>
+                        <input class="form-control" id="gasprice">
                     </div>
                     <button class="btn btn-primary btn-sm" onclick="sendTransaction();"> Send transaction</button>
                 </div>
